all basic functions work

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
-            <a href="#">Posenet</a>
+            <a href="posenet.html">Posenet</a>
             <a href="community.html">Community</a>
 
         </nav>
