--- a/community.html
+++ b/community.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
-            <a href="#">Practical Videos</a>
+            <a href="videos.html">Practical Videos</a>
             <a href="#">Posenet</a>
             <a href="community.html" class="active">Community</a>
         </nav>
