--- a/posenet.html
+++ b/posenet.html
@@ -44,9 +44,9 @@
             </div>
 
             <!-- Container for the video/canvas feed -->
-            <div id="video-feed-container">
+            <div id="video-feed-container"> </div>
                 <!-- The canvas for the live video feed will be inserted here by P5.js -->
-            </div>
+        
         </section>
 
         <script src="sketch.js"></script>
