--- a/unit1-flashcards.html
+++ b/unit1-flashcards.html
@@ -53,10 +53,13 @@
     <!-- JavaScript for Interactivity -->
     <script>
         const flashcards = [
-            {question: "What is Natya Veda?", answer: "Natya Veda is the fifth Veda, created by Brahma..."},
+            {question: "What was the first play produced by Bharata's troupe, and what festival was it performed at?", answer: "The play was Asura Parajaya, performed at Indra Dhvaja (Indra's flag) festival"},
             {question: "Who created Natya Veda?", answer: "Natya Veda was created by Brahma."},
+            {question: "Who taught instrumental music and vocal music to Bharata’s troupe?", answer: "Sage Swati taught insturmental music and sage Narada taught vocal music"},
             {question: "What are the four existing Vedas?", answer: "Rig Veda, Sama Veda, Yajur Veda, and Atharva Veda."},
-            // Add more flashcards as needed
+            {question: "Why was Natya griha (theatre) constructed and who built it?", answer: "It was constructed by Viswakarma, the celestial architect, to protect the actors and production from further disturbances caused by demons."},
+            // Add more flashcards as needed 
+            
         ];
 
         let currentIndex = 0;
