--- a/unit1-objectives.html
+++ b/unit1-objectives.html
@@ -16,7 +16,7 @@
             <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
-            <a href="#">Posenet</a>
+            <a href="posenet.html">Posenet</a>
             <a href="community.html">Community</a>
         </nav>
     </header>
@@ -43,7 +43,7 @@
 
             <div class="practice">
                 <h3>Practice:</h3>
-                <button onclick="location.href='#'">Memory Game</button>
+                <button onclick="location.href='memory-game.html'">Memory Game</button>
                 <button onclick="location.href='unit1-flashcards.html'">Flashcards</button>
             </div>
 
