--- a/memory-game.html
+++ b/memory-game.html
@@ -15,9 +15,9 @@
         <nav>
             <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
-            <a href="#">Practical Videos</a>
-            <a href="#">Posenet</a>
-            <a href="#">Community</a>
+            <a href="videos.html">Practical Videos</a>
+            <a href="posenet.html">Posenet</a>
+            <a href="community.html">Community</a>
         </nav>
     </header>
 
