--- a/unit1-overview.html
+++ b/unit1-overview.html
@@ -16,7 +16,7 @@
             <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
-            <a href="#">Posenet</a>
+            <a href="posenet.html">Posenet</a>
             <a href="community.html">Community</a>
         </nav>
     </header>
@@ -28,6 +28,8 @@
             <h3>Overview</h3>
             <p>This unit delves into the origin of Natya (drama and dance) as described in Bharata’s Natya Sastra. The text begins with Bharata paying homage to Lord Brahma, the creator of Natya, and Lord Shiva, the creator of dance.</p>
             <p>Natya Veda, known as the fifth Veda, was created by Brahma at the request of Indra and other gods to guide humanity through an enjoyable and instructive art form, combining elements from the four existing Vedas. Natya encompasses moral teachings, intellectual growth, and the portrayal of both historical and mythological events.</p>
+            <p>  Brahma taught Natya Veda to Bharata, who in turn trained his disciples (Bharata-putras) to perform various roles using four modes of expression, or Vrittis: Bharati (vocal), Arabhati (forceful), Saattvatii (emotional), and Kaisikii (graceful). The first play produced was Asura Parajaya (The Defeat of the Demons), which angered the demons and led to their disruption of the performance. In response, Brahma ordered the construction of a Natya griha (theatre), guarded by various gods, to ensure the smooth execution of future productions. </p>
+            <p> The unit also highlights the Purvaranga Vidhi, or preliminary rituals, conducted before performances to honor the Ranga Devatas (gods presiding over the theatre and production). Ultimately, Natya Veda reflects the happenings of the three worlds and presents the lives of gods, demons, kings, and common people, embodying the knowledge and wisdom of all arts and sciences.</p> 
             <a href="unit1-flashcards.html" class="next-link">› Flashcards</a>
 
             <!-- Navigation to next​⬤
