--- a/memory-game.html
+++ b/memory-game.html
@@ -10,10 +10,12 @@
 
     <header>
         <div class="logo">
-            <h1>taandav</h1>
+            <!-- Replacing text-based logo with image-based logo -->
+            <a href="index.html">
+                <img src="images/Taandav_Logo.png" alt="Taandav Logo" style="height: 60px;">
+            </a>
         </div>
         <nav>
-            <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
             <a href="posenet.html">Posenet</a>
@@ -23,7 +25,7 @@
 
     <main>
         <section class="memory-game-section">
-            <a href="unit1-terms-overview.html" class="back-link">← Terms Overview</a>
+            <a href="unit1-objectives.html" class="back-button"> &lt; Back to Objectives</a>
             <h2>Unit 1 - Origin of Natya</h2>
             <h3>Memory Game</h3>
 
@@ -31,7 +33,6 @@
                 <!-- The game cards will be inserted here by JavaScript -->
             </div>
 
-            <a href="unit1-terms-overview.html" class="memory-game-btn">Terms Overview</a>
         </section>
     </main>
 
