--- a/unit1-flashcards.html
+++ b/unit1-flashcards.html
@@ -10,20 +10,22 @@
 
     <header>
         <div class="logo">
-            <h1>taandav</h1>
+            <!-- Replacing text-based logo with image-based logo -->
+            <a href="index.html">
+                <img src="images/Taandav_Logo.png" alt="Taandav Logo" style="height: 60px;">
+            </a>
         </div>
         <nav>
-            <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
-            <a href="#">Posenet</a>
+            <a href="posenet.html">Posenet</a>
             <a href="community.html">Community</a>
         </nav>
     </header>
 
     <main>
         <section class="flashcards-page">
-            <a href="unit1-overview.html" class="back-link">← Back</a>
+            <a href="unit1-objectives.html" class="back-button"> &lt; Back to Objectives</a>
             <h2>Unit 1 - Origin of Natya</h2>
             <h3>Flashcards</h3>
 
@@ -35,17 +37,11 @@
 
             <!-- Navigation for flashcards -->
             <div class="flashcard-navigation">
-                <a href="#" id="previous-card" class="back-link">← Previous</a>
-                <span class="flashcard-number">1 of 10</span>
-                <a href="#" id="next-card" class="next-link">Next →</a>
+                <a href="#" id="previous-card" class="previous-link">&lt; Previous</a>
+                <span class="flashcard-number">1 of 5</span>
+                <a href="#" id="next-card" class="next-link">Next &gt;</a>
             </div>
 
-            <!-- Terms overview button -->
-            <div class="terms-overview-section">
-                <a href="unit1-terms-overview.html" class="memory-game-btn">Terms Overview</a>
-            </div>
-            </div>
-            </div>
         </section>
 
     </main>
