--- a/unit1-objectives.html
+++ b/unit1-objectives.html
@@ -10,10 +10,12 @@
 
     <header>
         <div class="logo">
-            <h1>taandav</h1>
+            <!-- Replacing text-based logo with image-based logo -->
+            <a href="index.html">
+                <img src="images/Taandav_Logo.png" alt="Taandav Logo" style="height: 60px;">
+            </a>
         </div>
         <nav>
-            <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
             <a href="posenet.html">Posenet</a>
@@ -23,32 +25,52 @@
 
     <main>
         <section class="unit-page">
-            <a href="theory.html" class="back-link">← Back</a>
-            <h2>Unit 1 - Origin of Natya</h2>
-            <div class="objectives">
-                <h3>Objectives:</h3>
-                <ul>
-                    <li>Understand the divine origins of Natya as explained in Bharata’s Natya Sastra.</li>
-                    <li>Learn how Lord Brahma created Natya Veda by integrating elements from the four Vedas.</li>
-                    <li>Explore how Bharata was taught Natya Veda and trained his disciples to perform plays.</li>
-                    <li>Study the significance of the first production, Asura Parajaya, and its impact on the demons.</li>
-                    <li>Discover the role of Viswakarma in constructing the Natya Griha to protect performances.</li>
-                    <li>Recognize Natya’s sacred and instructional role in guiding individuals toward moral and righteous living.</li>
-                </ul>
-            </div>
-            
-            <div class="begin-learning">
-                <button onclick="location.href='unit1-overview.html'">Begin Learning</button>
-            </div>
+            <h2>Unit 1 – Origins of Natya</h2>
+            <div class="content-container">
+                <!-- Objectives Section -->
+                <div class="objectives">
+                    <h3>Objectives:</h3>
+                    <ul>
+                        <li><strong>Understand</strong> the divine origins of Natya as explained in Bharata’s Natya Sastra.</li>
+                        <li><strong>Learn</strong> how Lord Brahma created Natya Veda by integrating elements from the four Vedas.</li>
+                        <li><strong>Recognize</strong> Natya’s sacred and instructional role in guiding individuals toward moral and righteous living.</li>
+                    </ul>
+                    <!-- Progress Bar -->
+                    <div class="progress-bar-objective">
+                        <img src="images/progress-2.png" alt="Progress Bar" style="height: 30px;">
+                    </div>
+                </div>
 
-            <div class="practice">
-                <h3>Practice:</h3>
-                <button onclick="location.href='memory-game.html'">Memory Game</button>
-                <button onclick="location.href='unit1-flashcards.html'">Flashcards</button>
+                <!-- Right-Side Menu (Units and Activities) -->
+                <div class="side-content">
+                    <div class="unit">
+                        <a href="story-one.html">
+                            <img src="images/story-of-natya.png" alt="Story of Natya">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="unit1-terms-overview.html">
+                            <img src="images/U-termsoverview.png" alt="Terms Overview">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="unit1-flashcards.html">
+                            <img src="images/U-flashcards.png" alt="Flashcards">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="memory-game.html">
+                            <img src="images/U-memorygame.png" alt="Memory Game">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="#">
+                            <img src="images/U-quiz.png" alt="Quiz">
+                        </a>
+                    </div>
+                </div>
             </div>
-
-            <div class="relevant-videos">
-                <h3>Relevant Videos:</h3>
-                <ul>
-                    <li>Introduction - Exercises</li>
-                    <li>Intro to Nat​ya
+        </section>
+    </main>
+</body>
+</html>
