--- a/unit1-terms-overview.html
+++ b/unit1-terms-overview.html
@@ -10,10 +10,12 @@
 
     <header>
         <div class="logo">
-            <h1>taandav</h1>
+            <!-- Replacing text-based logo with image-based logo -->
+            <a href="index.html">
+                <img src="images/Taandav_Logo.png" alt="Taandav Logo" style="height: 60px;">
+            </a>
         </div>
         <nav>
-            <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
             <a href="posenet.html">Posenet</a>
@@ -23,7 +25,7 @@
 
     <main>
         <section class="terms-overview">
-            <a href="unit1-flashcards.html" class="back-link">← Back to Flashcards</a>
+            <a href="unit1-objectives.html" class="back-button"> &lt; Back to Objectives</a>
             <h2>Unit 1 - Origin of Natya</h2>
             <h3>Terms Overview</h3>
 
@@ -74,7 +76,6 @@
                 </div>
             </div>
 
-            <a href="memory-game.html" class="memory-game-btn">Memory Game</a>
         </section>
     </main>
 
