--- a/community.html
+++ b/community.html
@@ -10,14 +10,16 @@
 
     <header>
         <div class="logo">
-            <h1>taandav</h1>
+            <!-- Replacing text-based logo with image-based logo -->
+            <a href="index.html">
+                <img src="images/Taandav_Logo.png" alt="Taandav Logo" style="height: 60px;">
+            </a>
         </div>
         <nav>
-            <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
             <a href="posenet.html">Posenet</a>
-            <a href="community.html" class="active">Community</a>
+            <a href="community.html">Community</a>
         </nav>
     </header>
 
