--- a/theory.html
+++ b/theory.html
@@ -10,10 +10,12 @@
 
     <header>
         <div class="logo">
-            <h1>taandav</h1>
+            <!-- Replacing text-based logo with image-based logo -->
+            <a href="index.html">
+                <img src="images/Taandav_Logo.png" alt="Taandav Logo" style="height: 60px;">
+            </a>
         </div>
         <nav>
-            <a href="index.html">Dashboard</a>
             <a href="theory.html">Theory</a>
             <a href="videos.html">Practical Videos</a>
             <a href="posenet.html">Posenet</a>
@@ -23,32 +25,40 @@
 
     <main>
         <section class="theory-page">
-            <h2>Theory - Level 1</h2>
-            <!-- Progress Bar -->
-            <div class="progress-bar">
-                <div class="progress" style="width: 20%;"></div>
-                <span class="progress-text">Progress</span>
+            <div class="theory-layout">
+                <!-- Left Side: Large Image of Dancer -->
+                <div class="image-container">
+                    <img src="images/dancer.png" alt="Dancer Image">
+                </div>
+    
+                <!-- Right Side: Units Section -->
+                <div class="units">
+                    <div class="unit">
+                        <a href="unit1-objectives.html">
+                            <img src="images/theoryunit1-unlocked.png" alt="Unit 1 - Origin of Natya">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="#">
+                            <img src="images/theoryunit2-locked.png" alt="Unit 2 - Technical Terms">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="#">
+                            <img src="images/theoryunit3-locked.png" alt="Unit 3 - Slokas, Sapta Taala">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="#">
+                            <img src="images/theoryunit4-locked.png" alt="Unit 4 - Asamyutha Hastas">
+                        </a>
+                    </div>
+                    <div class="unit">
+                        <a href="#">
+                            <img src="images/theoryunit5-locked.png" alt="Unit 5 - Paada Karma">
+                        </a>
+                    </div>
+                </div>
             </div>
-
-            <!-- Units Section -->
-            <div class="units">
-                <div class="unit" onclick="location.href='unit1-objectives.html'">
-                    <h3>Unit 1</h3>
-                    <p>Origin of Natya</p>
-                </div>
-                <div class="unit">
-                    <h3>Unit 2</h3>
-                    <p>Technical terms Definitions</p>
-                </div>
-                <div class="unit">
-                    <h3>Unit 3</h3>
-                    <p>Slokas, Sapta Taala</p>
-                </div>
-                <div class="unit">
-                    <h3>Unit 4</h3>
-                    <p>Asamyutha Hastas</p>
-                </div>
-                <div class="unit">
-                    <h3>Unit 5</h3>
-                    <p>Paada Karma</p>
-                    
+        </section>
+    </main>
